--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/lasagna_simples.html">Lasagna Simples</a>
     </body>
 
 </html>
