--- a/recipes/lasagna_simples.html
+++ b/recipes/lasagna_simples.html
@@ -11,6 +11,10 @@
         <a href="../index.html">Home</a>
 
         <h1>Lasagna Simples</h1>
+
+        <img src="../img/lasagna.jpeg" alt="uma suculenta lasagna no prato" width="800">
+
+
     </body>
 
 </html>
