Add ingredients list to lasagna_simples

--- a/recipes/lasagna_simples.html
+++ b/recipes/lasagna_simples.html
@@ -14,6 +14,20 @@
 
         <img src="../img/lasagna.jpeg" alt="uma suculenta lasagna no prato" width="800">
 
+        <h2>Ingredientes</h2>
+
+        <ul>
+            <li>1/2 pacote (200g) de lasagna pré-cozida</li>
+            <li>3 colheres de sopa de azeite extra-virgem</li>
+            <li>1 dente de alho picado</li>
+            <li>2 latas de tomates, pelados, picados</li>
+            <li>1 colher de chá, de sal</li>
+            <li>300g de presunto fatiado</li>
+            <li>300g de queijo muzzarela fatiado</li>
+            <li>1 pacote (100g) de queijo parmesão</li>
+        </ul>
+
+        
 
     </body>
 
