Add description to lasagna_simples

--- a/recipes/lasagna_simples.html
+++ b/recipes/lasagna_simples.html
@@ -14,6 +14,14 @@
 
         <img src="../img/lasagna.jpeg" alt="uma suculenta lasagna no prato" width="800">
 
+        <h2>Descrição</h2>
+
+        <p>A lasagna é um prato de origem italiana, relativamente simples de preparar, como quase todo prato italiano, e faz parte do grupo de receitas que qualquer pessoa que queira cozinhar precisa aprender.</p>
+
+        <p>É comumente associada a jantares românticos, acompanhada de um bom vinho, e música suave.</p>
+
+        <p>Embora essa receita use presunto e muzzarela como recheio, a lasagna normalmente preparada com molho "bolonhesa". Um molho de carne moída refogada com bastante molho de tomate.</p>
+        
         <h2>Ingredientes</h2>
 
         <ul>
@@ -27,7 +35,7 @@
             <li>1 pacote (100g) de queijo parmesão</li>
         </ul>
 
-        
+
 
     </body>
 
