--- a/recipes/lasagna_simples.html
+++ b/recipes/lasagna_simples.html
@@ -24,17 +24,24 @@
         
         <h2>Ingredientes</h2>
 
-        <ul>
-            <li>1/2 pacote (200g) de lasagna pré-cozida</li>
-            <li>3 colheres de sopa de azeite extra-virgem</li>
-            <li>1 dente de alho picado</li>
-            <li>2 latas de tomates, pelados, picados</li>
-            <li>1 colher de chá, de sal</li>
-            <li>300g de presunto fatiado</li>
-            <li>300g de queijo muzzarela fatiado</li>
-            <li>1 pacote (100g) de queijo parmesão</li>
-        </ul>
+            <ul>
+                <li>1/2 pacote (200g) de lasagna pré-cozida</li>
+                <li>3 colheres de sopa de azeite extra-virgem</li>
+                <li>1 dente de alho picado</li>
+                <li>2 latas de tomates, pelados, picados</li>
+                <li>1 colher de chá, de sal</li>
+                <li>300g de presunto fatiado</li>
+                <li>300g de queijo muzzarela fatiado</li>
+                <li>1 pacote (100g) de queijo parmesão</li>
+            </ul>
 
+        <h2>Passo a Passo</h2>
+
+            <ol>
+                <li>Para o molho, coloque em uma panela o azeite e o alho picado, deixe dourar. Junte o tomate pelado picado e tempere com sal. Deixe ferver por 10 minutos em fogo baixo.</li>
+                <li>Em um refratário (20cm x 30cm), coloque uma porção de molho, ainda quente, cubra com uma camada de massa, espalhe mais molho, fatias de presunto e queijo muzzarela. Repita as camadas até a borda do refratário.</li>
+                <li>Finalize com o queijo parmesão ralado, e leve ao forno pré-aquecido por cerca de 10 minutos a 200 graus, ou até dourar.</li>
+            </ol>
 
 
     </body>
