Add description to strogonoff_de_frango_simples

--- a/recipes/strogonoff_de_frango_simples.html
+++ b/recipes/strogonoff_de_frango_simples.html
@@ -16,23 +16,16 @@
 
         <h2>Descrição</h2>
 
-        <p></p>
+        <p>É tão popular no Brasil que muitas pessoas acham que é um prático nacional, mas na verdade é de origem russa.</p>
 
-        <p></p>
+        <p>Assim como a lasagna, é um práto simples, rápido, e muito prático. Perfeito para uma situação inesperada como uma visita, por exemplo.</p>
 
-        <p></p>
+        <p>Nessa refeita o strogonoff é feito com frango, mas também é muito comum preparar esse prato com carne.</p>
         
         <h2>Ingredientes</h2>
 
             <ul>
-                <li>1/2 pacote (200g) de lasagna pré-cozida</li>
-                <li>3 colheres de sopa de azeite extra-virgem</li>
-                <li>1 dente de alho picado</li>
-                <li>2 latas de tomates, pelados, picados</li>
-                <li>1 colher de chá, de sal</li>
-                <li>300g de presunto fatiado</li>
-                <li>300g de queijo muzzarela fatiado</li>
-                <li>1 pacote (100g) de queijo parmesão</li>
+                <li></li>
             </ul>
 
         <h2>Passo a Passo</h2>
