Add ingredients to strogonoff_de_frango_simples

--- a/recipes/strogonoff_de_frango_simples.html
+++ b/recipes/strogonoff_de_frango_simples.html
@@ -25,7 +25,13 @@
         <h2>Ingredientes</h2>
 
             <ul>
-                <li></li>
+                <li>500g de peito de frango</li>
+                <li>1 colher de sopa, de manteiga ou margarina</li>
+                <li>1/2 cebola picada ou ralada</li>
+                <li>sal à gosto</li>
+                <li>pimenta do reino à gosto</li>
+                <li>1 caixinha de creme de leite (200g)</li>
+                <li>6 colheres de sopa, de ketchup</li>
             </ul>
 
         <h2>Passo a Passo</h2>
