Add steps to strogonoff_de_frango_simples

--- a/recipes/strogonoff_de_frango_simples.html
+++ b/recipes/strogonoff_de_frango_simples.html
@@ -37,9 +37,11 @@
         <h2>Passo a Passo</h2>
 
             <ol>
-                <li>Para o molho, coloque em uma panela o azeite e o alho picado, deixe dourar. Junte o tomate pelado picado e tempere com sal. Deixe ferver por 10 minutos em fogo baixo.</li>
-                <li>Em um refratário (20cm x 30cm), coloque uma porção de molho, ainda quente, cubra com uma camada de massa, espalhe mais molho, fatias de presunto e queijo muzzarela. Repita as camadas até a borda do refratário.</li>
-                <li>Finalize com o queijo parmesão ralado, e leve ao forno pré-aquecido por cerca de 10 minutos a 200 graus, ou até dourar.</li>
+                <li>Corte o peito de frango em cubos pequenos ou tirinhas.</li>
+                <li>Coloque em uma panela a manteiga, esquente e coloque a cebola, refogue até dourar.</li>
+                <li>Adicione o frango, tempere com sal e pimenta do reino. Deixe dourar bem, adicione 1/2 xícara de água e deixe ferver até a água quase sumir.</li>
+                <li>Quando tiver bem pouquinha água adicione o creme de leite e o ketchup, misture, deixe esquentar, prove, e ajuste o tempero, se necessário.</li>
+                <li>Sirva quente, acompanhado de arroz branco, batata palha, e uma salada leve.</li>
             </ol>
 
 
