Add description to pizza_simples_de_liquificador

--- a/recipes/pizza_simples_de_liquificador.html
+++ b/recipes/pizza_simples_de_liquificador.html
@@ -16,11 +16,11 @@
 
         <h2>Descrição</h2>
 
-        <p>.</p>
+        <p>A pizza é um dos pratos mais populares do mundo. É mais vista como "confort food", um prato festivo, para dar prazer, mais que para alimentar propriamente.</p>
 
-        <p>.</p>
+        <p>É um prato que cai bem para receber amigos, para comemorar momentos especiais, e até mesmo um jantar a dois.</p>
 
-        <p>.</p>
+        <p>De origem italiana, também faz parte do repertório de todo aspirante a cozinheiro.</p>
 
         <a href="file:///home/mauro/Desktop/Odin/odin-recipes/recipes/pizza_simples_de_liquificador.html">Receita Original</a>
         
