Add ingredients to pizza_simples_de_liquificador

--- a/recipes/pizza_simples_de_liquificador.html
+++ b/recipes/pizza_simples_de_liquificador.html
@@ -24,18 +24,29 @@
 
         <a href="file:///home/mauro/Desktop/Odin/odin-recipes/recipes/pizza_simples_de_liquificador.html">Receita Original</a>
         
-        <h2>Ingredientes</h2>
+        <h2>Ingredientes - Massa</h2>
 
             <ul>
-                <li>1/2 pacote (200g) de lasagna pré-cozida</li>
-                <li>3 colheres de sopa de azeite extra-virgem</li>
-                <li>1 dente de alho picado</li>
-                <li>2 latas de tomates, pelados, picados</li>
-                <li>1 colher de chá, de sal</li>
-                <li>300g de presunto fatiado</li>
-                <li>300g de queijo muzzarela fatiado</li>
-                <li>1 pacote (100g) de queijo parmesão</li>
+                <li>1 xícara (de chá) de leite</li>
+                <li>1 ovo</li>
+                <li>1 colher (de chá) de sal</li>
+                <li>1 colher (de chá) de açúcar</li>
+                <li>1 colher (de sopa) de manteiga</li>
+                <li>1 e 1/2 xícaras (de chá) de farinha de trigo</li>
+                <li>1 colher (de sobremesa) de fermento em pó</li>
+                <li>1/2 lata de molho de tomate</li>
             </ul>
+
+        <h2>Ingredientes - Cobertura</h2>
+
+            <ul>
+                <li>250g de muzzarela ralada grossa, ou em fatias</li>
+                <li>2 tomates fatiados</li>
+                <li>azeitona picada</li>
+                <li>orágano a gosto</li>
+            </ul>
+
+        
 
         <h2>Passo a Passo</h2>
 
