Add steps to pizza_simples_de_liquificador

--- a/recipes/pizza_simples_de_liquificador.html
+++ b/recipes/pizza_simples_de_liquificador.html
@@ -22,7 +22,7 @@
 
         <p>De origem italiana, também faz parte do repertório de todo aspirante a cozinheiro.</p>
 
-        <a href="file:///home/mauro/Desktop/Odin/odin-recipes/recipes/pizza_simples_de_liquificador.html">Receita Original</a>
+        <a href="https://thergon.com/pizza-de-liquidificador-simples-e-facil/2/">Receita Original</a>
         
         <h2>Ingredientes - Massa</h2>
 
@@ -47,16 +47,16 @@
             </ul>
 
         
-
         <h2>Passo a Passo</h2>
 
             <ol>
-                <li>Para o molho, coloque em uma panela o azeite e o alho picado, deixe dourar. Junte o tomate pelado picado e tempere com sal. Deixe ferver por 10 minutos em fogo baixo.</li>
-                <li>Em um refratário (20cm x 30cm), coloque uma porção de molho, ainda quente, cubra com uma camada de massa, espalhe mais molho, fatias de presunto e queijo muzzarela. Repita as camadas até a borda do refratário.</li>
-                <li>Finalize com o queijo parmesão ralado, e leve ao forno pré-aquecido por cerca de 10 minutos a 200 graus, ou até dourar.</li>
+                <li>No liquidificador, bata o leite, o ovo, o sal, o açúcar, a manteiga, a farinha de trigo e o fermento, até que tudo esteja encorpado.</li>
+                <li>Despeje a massa em uma assadeira de pizza, untada com manteiga, e leve ao forno pré-aquecido, por 20 minutos.</li>
+                <li>Retire do forno, cubra com molho de tomate, a muzzarela, tomate e orégano, a gosto. Leve de volta ao forno até derreter a muzzarela.</li>
+                <li>Sirva quente, acompanhada de alguma bebida gelada, podendo ser refrigerante, suco, cerveja ou vinho.</li>
             </ol>
 
-
+            <p>Outros acompanhamentos bem vindos para esse prato são azeitonas e linguiça calabreza, colocadas sobre a mozzarela, antes de retornar ao forno.</p>
     </body>
 
 </html>
