Add links to other recipes on index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/lasagna_simples.html">Lasagna Simples</a>
+        <ul>
+            <li><a href="./recipes/lasagna_simples.html">Lasagna Simples</a></li>
+            <li><a href="./recipes/strogonoff_de_frango_simples.html">Strogonoff de Frango Simples</a></li>
+            <li><a href="./recipes/pizza_simples_de_liquificador.html">Pizza Simples de Liquificador</a></li>
+        </ul>
+
     </body>
 
 </html>
