--- a/recipes/strogonoff_de_frango_simples.html
+++ b/recipes/strogonoff_de_frango_simples.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Strogonoff de Frango Simples</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
